fix(client): truncate client name in navbar

--- a/src/theme/sass/style.scss
+++ b/src/theme/sass/style.scss
@@ -22,11 +22,10 @@ code {
 }
 
 .truncate {
-	flex: 1;
-
 	> *:first-child {
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		display: block;
 	}
 }
